IRtest_out/wa.err
irs/wa.ll:39:1: error: expected instruction opcode
next_entry55:
^
1 error generated.
